Fix Cookie warning on Dark mode

--- a/src/scss/helpers/darkmode.scss
+++ b/src/scss/helpers/darkmode.scss
@@ -21,4 +21,8 @@
       @apply bg-gray-800;
     }
   }
+
+  .cookie-warning {
+    @apply text-black;
+  }
 }
